2007-05-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_set_mixed_color), (clearlooks_glossy_draw_button):
	* engines/support/cairo-support.c: (ge_mix_color):
	* engines/support/cairo-support.h:
	Few fixes on ge_mix_color

2007-05-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_set_mixed_color), (clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_progressbar_trough),
	(clearlooks_glossy_scale_draw_gradient),
	(clearlooks_glossy_draw_slider),
	(clearlooks_glossy_draw_scrollbar_stepper),
	(clearlooks_glossy_draw_scrollbar_slider),
	(clearlooks_glossy_draw_radiobutton),
	(clearlooks_glossy_draw_checkbox):
	Renamed set_border_color to set_mixed_color
	Improved prelight on radio and checks, fixes usability problems

2007-05-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_radiobutton), (clearlooks_draw_checkbox),
	(clearlooks_register_style_classic):
	Added inset and improved compatibility with dark themes

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_radiobutton),
	(clearlooks_glossy_draw_checkbox),
	(clearlooks_register_style_glossy):
	Added a variation of default clearlooks radi oand check with
	a spot[2] border on prelight.
	Need more work but it seems less buggied and better looking

2007-05-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_radiobutton), (clearlooks_draw_checkbox),
	(clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_draw_radio_gloss),
	(clearlooks_glossy_draw_radiobutton),
	(clearlooks_glossy_draw_checkbox),
	(clearlooks_register_style_glossy):

2007-05-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_optionmenu), (clearlooks_draw_separator),